<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/inicio"
        android:title="@string/nav_inicio" />
    <item
        android:id="@+id/nav_personajes"
        android:icon="@drawable/personajes"
        android:title="@string/nav_personajes" />
    <item
        android:id="@+id/nav_videos"
        android:icon="@drawable/videos"
        android:title="@string/nav_videos" />
    <item
        android:id="@+id/nav_sonidos"
        android:icon="@drawable/sonidos"
        android:title="@string/nav_sonidos" />
    <item
        android:id="@+id/nav_animaciones"
        android:icon="@drawable/animaciones"
        android:title="@string/nav_animaciones" />
</menu>